<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#FFF"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:fitsSystemWindows="true"
        app:srcCompat="@drawable/kominfo" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="14sp"
        android:textColor="#000"
        />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
        android:ems="10"
        android:inputType="textFilter"
        android:textColor="#000"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textColor="#000"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:textColor="#000"
        android:textSize="14sp"
        android:ems="10"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/action_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:background="#FF6200EE"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/action_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/register"
        android:layout_marginTop="20dp"
        android:background="#FF6200EE"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold"/>
</LinearLayout>