<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#000"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#000"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textSize="14sp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#000"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="#000"
                android:textSize="14sp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_lengkap"
                android:textColor="#000"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/editNamaLengkap"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000"
                android:textSize="14sp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asal_sekolah"
                android:textColor="#000"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/editAsalSekolah"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:textColor="#000"
                android:textSize="14sp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat_tinggal"
                android:textColor="#000"
                android:textSize="14sp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/editAlamat"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:gravity="top"
                android:lines="3"
                android:padding="5dp"
                android:singleLine="false"/>

            <Button
                android:id="@+id/btnSimpanr"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:background="#FF6200EE"
                android:text="@string/simpan"
                android:textSize="14sp"
                android:textColor="#FFF"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>